<resources>
    <string name="app_name">Barangay Ambiong LTB-LGU</string>
    <string name="button_string1">Appointment</string>
    <string name="title">Welcome, User!</string>
    <string name="report">Report</string>
    <string name="locate">Locate Barangay Hall</string>
    <string name="announcement">Announcement</string>
    <string name="profile">profile</string>
    <string name="settings">settings</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_signup">Signup</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="doc1">Certificate of Residency</string>
    <string name="doc2">Barangay Clearance</string>
    <string name="doc3">Barangay ID Card</string>
    <string name="doc4">Barangay Certificate</string>
    <string name="my_map_api_key">AIzaSyCvEa4iVs40ifFl3o1mrXr4UNkQ-cSX2jU</string>
    <string name="title_activity_navigation_view_main">navigation_view_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="Vision">We envision Barangay Ambiong to become a model of a just, clean, progressive, and fully developed barangay, where people live harmoniously, and enjoy the fullness of God’s love.</string>
    <string name="Mission">To bring about the delivery of adequate and responsive services thru peoples involvement, empowerment and networking with GO’s, NGO’s, and PO’s by utilizing available resources.</string>
    <string name="Goal">To uplift and improve the quality of life by sustaining community mobilization in the barangay development activities.</string>
    <string name="sincewhen">Months/Years stayed in this barangay*</string>
    <string-array name="report_types">
        <item>Incident Report</item>
        <item>Noise Complaint</item>
        <item>Lost and Found Report</item>
        <item>Community Report</item>
        <item>Natural Disaster Incident Report</item>
    </string-array>
    <string name="get_notified">Get Notified</string>
    <string name="details_text">Our app keeps you updated with all of the latest events.</string>
    <string name="i_m_in">I\'m in</string>
    <string name="skip">Skip</string>
    <string name="phone_number">Phone Number*</string>
    <string name="sendOneTimePassword">We will send you a One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enterOTP">Enter the OTP sent to</string>
    <string name="history_ambiong_desc">Long time ago, Barangay Ambiong was a part of a vast land in La Trinidad. However, it got no name during those times until settlers from Kabayan, Bokod, Amburayan, Ampusongan and Kibungan of Benguet came. Majority of the natives who settled in the area were the Ibalois and Kankanaeys. The term Ambiong originally came from the ibaloi word “AMBIONGAN” which generally means “BLACK CARPET BEES”. These bees were often found in the rolling hills and forests where wild flowers and the thick foliage used to abound. They also make their shelters by drilling through the trunk of dead trees. Ambiong was predominantly a thick lush, rich flora and fauna up until the 1960’s. For a long time, before the modern era, the area was purposely for hunting and food gathering activities. \n \n \n Generally, the Barangay was a part of Barangay Eastern Pico but it was separated in 1948 by virtue of Presidential Decree (P.D.) No. 3590 and P.D. No. 557. Since then, it was called BARANGAY AMBIONG.

</string>
</resources>