<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/activityBackgroundColor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#474747"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <ImageButton
        android:id="@+id/appointment_button"
        android:layout_width="327sp"
        android:layout_height="58sp"
        android:layout_marginTop="70dp"
        android:background="@drawable/appointment_button"
        android:text="@string/button_string1"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/report_button"
        android:layout_width="327sp"
        android:layout_height="58sp"
        android:layout_marginTop="14dp"
        android:background="@drawable/report_button"
        android:text="@string/report"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_button" />

    <ImageButton
        android:id="@+id/locate_button"
        android:layout_width="327sp"
        android:layout_height="58sp"
        android:layout_marginTop="14dp"
        android:background="@drawable/loc_button"
        android:text="@string/locate"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_button" />

    <ImageButton
        android:id="@+id/announcement_button"
        android:layout_width="327sp"
        android:layout_height="58sp"
        android:layout_marginTop="14dp"
        android:background="@drawable/announcement_button"
        android:text="@string/announcement"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locate_button" />




</androidx.constraintlayout.widget.ConstraintLayout>