<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:background="@color/navyblue"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="#474747"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.32999998" />

                <ImageButton
                    android:id="@+id/appointment_button"
                    android:layout_width="327sp"
                    android:layout_height="58sp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/securedocumentsbtn"
                    android:text="@string/button_string1"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <ImageButton
                    android:id="@+id/report_button"
                    android:layout_width="327sp"
                    android:layout_height="58sp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/report_button"
                    android:text="@string/report"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appointment_button" />

                <ImageButton
                    android:id="@+id/locate_button"
                    android:layout_width="327sp"
                    android:layout_height="58sp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/loc_button"
                    android:text="@string/locate"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/report_button" />

                <ImageButton
                    android:id="@+id/announcement_button"
                    android:layout_width="327sp"
                    android:layout_height="58sp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/announcement_button"
                    android:text="@string/announcement"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locate_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>





    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/divider_grey"
        app:itemTextColor="@color/text_field_stroke_color_grey"/>
</androidx.drawerlayout.widget.DrawerLayout>